font-family mixin added

--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -2,4 +2,13 @@
 $color :(
     primary:#f24343,
     secondary: #f9b520
-)
+);
+
+//FONT-WEIGHTS
+$font-weight :(
+	light: 300,
+	regular: 400,
+	semi-bold: 600,
+    bold: 700,
+    extra-bold: 800
+);
