--- a/base/_extends.scss
+++ b/base/_extends.scss
@@ -1,7 +1,18 @@
+@import "variables";
+
 //FONT SIZES
-$fonts : 10, 12, 14, 16, 16, 18, 20, 30, 40;
-@each $font in $fonts {
-  .font-#{$font}{
-    font-size: $font + 'px';
-  }
+@for $i from $minFontSize through $maxFontSize {
+  .font-#{$i} {
+        font-size:#{$i}px;
+    }
 }
+
+/* 
+==================================== 
+How to use
+<p class="font-xxx">some text</p>
+
+xxx: can be any number b/w 8-50
+====================================  
+*/
+
