--- a/base/_extends.scss
+++ b/base/_extends.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 //FONT SIZES
-@for $i from $minFontSize through $maxFontSize {
+@for $i from map-get($fontSizeRange, min) through map-get($fontSizeRange, max) {
   .font-#{$i} {
         font-size:#{$i}px;
     }
