Placeholder mixin added

--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -57,3 +57,10 @@
   }
 }
 
+// PLACEHOLDER STYLING
+@mixin placeholder {
+    &:-moz-placeholder { @content; }
+    &::-moz-placeholder { @content; }
+    &:-ms-input-placeholder { @content; }
+    &::-webkit-input-placeholder { @content; }
+}
