--- a/style.css
+++ b/style.css
@@ -33,6 +33,50 @@
   font-weight: 800;
   font-style: normal; }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+.wrapper .hr-divider {
+  margin: 30px 0; }
+
+.wrapper .side-nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  background-color: gray;
+  padding: 30px; }
+  .wrapper .side-nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    .wrapper .side-nav ul li {
+      display: block; }
+      .wrapper .side-nav ul li a {
+        text-decoration: none;
+        font-size: 14px;
+        color: #ffffff; }
+        .wrapper .side-nav ul li a:hover {
+          text-decoration: underline; }
+
+.wrapper .content {
+  margin-left: 300px;
+  padding: 30px;
+  height: 100%; }
+
+.wrapper .topic .topic-title {
+  font-size: 24px;
+  margin-bottom: 5px; }
+
+.wrapper .code-snippet {
+  background-color: lightgrey;
+  border: 1px solid grey;
+  border-radius: 4px;
+  padding: 10px; }
+
 html, body {
   font-family: 'Open Sans'; }
 
