--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,62 @@
 @import 'base/variables';
 @import 'vendor/fonts';
 
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.wrapper{
+    .hr-divider{
+        margin:30px 0;
+    }
+    .side-nav{
+        position: fixed;
+        left: 0;
+        top:0;
+        width: 300px;
+        height: 100%;
+        background-color: gray;
+        padding: 30px;
+        ul{
+            margin:0;
+            padding: 0;
+            list-style: none;
+            li{
+                display: block;
+                a{  
+                    text-decoration: none;
+                    font-size: 14px;
+                    color:#ffffff;
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
+    .content{
+        margin-left: 300px;
+        padding: 30px;
+        height: 100%;   
+    }
+
+    .topic{
+        .topic-title{
+            font-size: 24px;
+            margin-bottom: 5px;
+        }
+    }
+
+    .code-snippet{
+        background-color: lightgrey;
+        border:1px solid grey;
+        border-radius: 4px;
+        padding:10px;
+    }
+}
+
 
 html,body{
     font-family: 'Open Sans';
@@ -12,3 +68,4 @@ h1{
 p{
     font-weight: map-get($font-weight, light);
 }
+
