icons and buttons added

--- a/style.css
+++ b/style.css
@@ -4,34 +4,95 @@
   src: url("../fonts/OpenSans-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Light.woff") format("woff"), url("../fonts/OpenSans-Light.ttf") format("truetype"), url("../fonts/OpenSans-Light.svg#Open Sans") format("svg");
   font-weight: 300;
   font-style: normal; }
-
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-Regular.eot");
   src: url("../fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans-Regular.ttf") format("truetype"), url("../fonts/OpenSans-Regular.svg#Open Sans") format("svg");
   font-weight: 400;
   font-style: normal; }
-
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-SemiBold.eot");
   src: url("../fonts/OpenSans-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-SemiBold.woff") format("woff"), url("../fonts/OpenSans-SemiBold.ttf") format("truetype"), url("../fonts/OpenSans-SemiBold.svg#Open Sans") format("svg");
   font-weight: 600;
   font-style: normal; }
-
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-Bold.eot");
   src: url("../fonts/OpenSans-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.ttf") format("truetype"), url("../fonts/OpenSans-Bold.svg#Open Sans") format("svg");
   font-weight: 700;
   font-style: normal; }
-
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-ExtraBold.eot");
   src: url("../fonts/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-ExtraBold.woff") format("woff"), url("../fonts/OpenSans-ExtraBold.ttf") format("truetype"), url("../fonts/OpenSans-ExtraBold.svg#Open Sans") format("svg");
   font-weight: 800;
   font-style: normal; }
+/* 
+'btn' is a mixin need to place values in order to add
+mixins parameter is used in a sequence and need to be update in a same format only- sequence mentioned below
+padding, background-color, font-size, border-radius, text-color, border-color
+if any of the option you dont want to pass any value, follow to instruction
+if you dont want to use any color use transparent and for any value you can pass 0
+*/
+.success-btn {
+  padding: 12px 20px;
+  background: #f24343;
+  font-size: 16px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: transparent;
+  cursor: pointer;
+  border: 0; }
+  .success-btn:hover {
+    background: #ef2121; }
+
+.secondary-btn {
+  padding: 12px 20px;
+  background: #f9af0d;
+  font-size: 16px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: transparent;
+  cursor: pointer;
+  border: 0; }
+  .secondary-btn:hover {
+    background: #f9af0d; }
+
+.cancel-btn {
+  padding: 12px 20px;
+  background: #fff;
+  font-size: 16px;
+  border-radius: 5px;
+  border-color: #4E4C70;
+  cursor: pointer;
+  border: 0;
+  border: 1px solid #4E4C70; }
+  .cancel-btn:hover {
+    background-color: rgba(94, 70, 182, 0.1);
+    color: #4E4C70;
+    border: 1px solid #4E4C70; }
+
+.success-btn.large,
+.cancel-btn.large,
+.secondary-btn.large {
+  padding: 12px 30px;
+  background: "";
+  font-size: 26px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: transparent;
+  cursor: pointer;
+  border: 0; }
+
+.success-btn:disabled,
+.secondary-btn:disabled,
+.cancel-btn:disabled {
+  border: 1px solid;
+  background: rgba(193, 192, 206, 0);
+  color: #C1C0CE;
+  border-color: #C1C0CE;
+  cursor: no-drop; }
 
 * {
   margin: 0;
@@ -40,7 +101,6 @@
 
 .wrapper .hr-divider {
   margin: 30px 0; }
-
 .wrapper .side-nav {
   position: fixed;
   left: 0;
@@ -61,16 +121,13 @@
         color: #ffffff; }
         .wrapper .side-nav ul li a:hover {
           text-decoration: underline; }
-
 .wrapper .content {
   margin-left: 300px;
   padding: 30px;
   height: 100%; }
-
 .wrapper .topic .topic-title {
   font-size: 24px;
   margin-bottom: 5px; }
-
 .wrapper .code-snippet {
   background-color: lightgrey;
   border: 1px solid grey;
@@ -85,3 +142,12 @@ h1 {
 
 p {
   font-weight: 300; }
+
+/*# sourceMappingURL=style.css.map */
+
+.glyph.fs1 {
+  display: inline-block;
+  width: 49%;
+  font-size: 30px;
+  padding: 12px 0;
+}
