--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -70,3 +70,27 @@
         font-style: $style;
     }
 }
+
+
+
+// button
+
+@mixin btn($btn-padding, $btn-background, $font-size, $radius, $txtcolor, $bordercolor) {
+  padding: $btn-padding;
+  background: $btn-background;
+  font-size: $font-size;
+  border-radius: $radius;
+  color: $txtcolor;
+  border-color: $bordercolor;
+  cursor: pointer;
+  border: 0;
+}
+
+// disbale button
+
+@mixin disable ($disable-background, $disable-text-color, $disable-border-color){
+  background:$disable-background ;
+  color: $disable-text-color;
+  border-color: $disable-border-color;
+  cursor: no-drop;
+}
