added examples for placeholde and font-size

--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -7,8 +7,8 @@ $fontSizeRange:(
 //COLORS
 $color :(
     primary:#f24343,
-    secondary: #f9b520
-);
+    secondary: #f9b520,
+    );
 
 //FONT-WEIGHTS
 $font-weight :(
