--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,20 @@
 @import 'base/variables';
 @import 'vendor/fonts';
+@import 'base/mixins';
+@import 'base/extends';
 
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.input-field{
+    padding: 5px;
+    @include placeholder{
+        color:red;
+        font-size: 12px;
+    };
 }
 
 .wrapper{
@@ -19,6 +29,7 @@
         height: 100%;
         background-color: gray;
         padding: 30px;
+        
         ul{
             margin:0;
             padding: 0;
