--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -66,11 +66,12 @@
 }
 
 // FONT-FAMILY
-@mixin font-face($font-name, $file-name, $weight, $style) {
+@mixin font-face($font-name, $file-name, $weight, $style:normal) {
     @font-face {
         font-family: quote($font-name);
         src: url($file-name+".eot");
         src: url($file-name+".eot?#iefix") format("embedded-opentype"),
+            url($file-name+".woff2") format("woff2"),    
             url($file-name+".woff") format("woff"),
             url($file-name+".ttf") format("truetype"),
             url($file-name+".svg##{$font-name}") format("svg");
