--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -1,3 +1,6 @@
+
+$baseFontFamily: 'Open Sans', sans-serif;
+
 //FONT SIZES RANGE
 $fontSizeRange:( 
     min:8, 
@@ -18,3 +21,5 @@ $font-weight :(
     bold: 700,
     extra-bold: 800
 );
+
+
