--- a/style.css
+++ b/style.css
@@ -1,35 +1,35 @@
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-Light.eot");
-  src: url("../fonts/OpenSans-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Light.woff") format("woff"), url("../fonts/OpenSans-Light.ttf") format("truetype"), url("../fonts/OpenSans-Light.svg#Open Sans") format("svg");
+  src: url("../fonts/OpenSans-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Light.woff2") format("woff2"), url("../fonts/OpenSans-Light.woff") format("woff"), url("../fonts/OpenSans-Light.ttf") format("truetype"), url("../fonts/OpenSans-Light.svg#Open Sans") format("svg");
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-Regular.eot");
-  src: url("../fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans-Regular.ttf") format("truetype"), url("../fonts/OpenSans-Regular.svg#Open Sans") format("svg");
+  src: url("../fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular.woff2") format("woff2"), url("../fonts/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans-Regular.ttf") format("truetype"), url("../fonts/OpenSans-Regular.svg#Open Sans") format("svg");
   font-weight: 400;
   font-style: normal; }
 
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-SemiBold.eot");
-  src: url("../fonts/OpenSans-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-SemiBold.woff") format("woff"), url("../fonts/OpenSans-SemiBold.ttf") format("truetype"), url("../fonts/OpenSans-SemiBold.svg#Open Sans") format("svg");
+  src: url("../fonts/OpenSans-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-SemiBold.woff2") format("woff2"), url("../fonts/OpenSans-SemiBold.woff") format("woff"), url("../fonts/OpenSans-SemiBold.ttf") format("truetype"), url("../fonts/OpenSans-SemiBold.svg#Open Sans") format("svg");
   font-weight: 600;
   font-style: normal; }
 
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-Bold.eot");
-  src: url("../fonts/OpenSans-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.ttf") format("truetype"), url("../fonts/OpenSans-Bold.svg#Open Sans") format("svg");
+  src: url("../fonts/OpenSans-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Bold.woff2") format("woff2"), url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.ttf") format("truetype"), url("../fonts/OpenSans-Bold.svg#Open Sans") format("svg");
   font-weight: 700;
   font-style: normal; }
 
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/OpenSans-ExtraBold.eot");
-  src: url("../fonts/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-ExtraBold.woff") format("woff"), url("../fonts/OpenSans-ExtraBold.ttf") format("truetype"), url("../fonts/OpenSans-ExtraBold.svg#Open Sans") format("svg");
+  src: url("../fonts/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-ExtraBold.woff2") format("woff2"), url("../fonts/OpenSans-ExtraBold.woff") format("woff"), url("../fonts/OpenSans-ExtraBold.ttf") format("truetype"), url("../fonts/OpenSans-ExtraBold.svg#Open Sans") format("svg");
   font-weight: 800;
   font-style: normal; }
 
@@ -167,6 +167,9 @@
   padding: 0;
   box-sizing: border-box; }
 
+html, body {
+  font-family: "Open Sans", sans-serif; }
+
 .input-field {
   padding: 5px; }
   .input-field:-moz-placeholder {
@@ -221,11 +224,10 @@
   border-radius: 4px;
   padding: 10px; }
 
-html, body {
-  font-family: 'Open Sans'; }
+.fontFamilySection-p1 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 800; }
 
-h1 {
-  font-weight: 700; }
-
-p {
+.fontFamilySection-p2 {
+  font-family: "Open Sans", sans-serif;
   font-weight: 300; }
