changes done as per the review and some other CSS changes done

--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -10,7 +10,7 @@ $color :(
     secondary: #f9b520,
     primary-hover: #ef2121,
     secondary-hover:#f9af0d,
-    cancel-btn-color: #4E4C70,
+    ghost-btn-text-color: #4E4C70,
     active:#5E46B6
 );
 
