--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -25,7 +25,7 @@ if you dont want to use any color use transparent and for any value you can pass
 }
 
 .cancel-btn{
-  @include btn(12px 20px, #fff, 16px, 5px, map-get($color, cancel-btn-text), #4E4C70);
+  @include btn(12px 20px, #fff, 16px, 5px, map-get($color, ghost-btn-text-color), #4E4C70);
   border: 1px solid map-get($color, cancel-btn-color);
   &:hover{
     background-color: rgba(94,70,182,0.1);
