--- a/style.css
+++ b/style.css
@@ -129,6 +129,9 @@ if you dont want to use any color use transparent and for any value you can pass
 .wrapper .topic .topic-title {
   font-size: 24px;
   margin-bottom: 15px; }
+  @media (max-width: 767px) {
+    .wrapper .topic .topic-title {
+      font-size: 20px; } }
 .wrapper .code-snippet {
   background-color: lightgrey;
   border: 1px solid grey;
