--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,9 @@
         .topic-title{
             font-size: 24px;
             margin-bottom: 15px;
+            @include for-phone-only {    
+                font-size: 20px;
+            }
         }
     }
 
