--- a/base/_theme-mixins.scss
+++ b/base/_theme-mixins.scss
@@ -1,8 +1,7 @@
-// arguments to be pass
+// arguments needs to be pass
 // 1. Main theme color or background
-// 2. text color white
-// 3. text-color black
-// 4. Themes shades
+// 2. text color
+// 3. Themes shades
 
 @mixin theme($theme-name, $text-color, $theme-shades: ()) {
     .success-btn {
