--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -15,7 +15,7 @@ $color :(
     offset-white: #f1f2f3,
     black-color: #000,
     white-color: #fff,
-    offset-black: #ccc
+    offset-black: #000
 );
 
 //FONT-WEIGHTS
