--- a/components/_theme.scss
+++ b/components/_theme.scss
@@ -7,6 +7,7 @@
 
 #base {
     &.light-theme {
+        background-color: #e7e7e7;
         $primary-theme: map-get($color, offset-white);
         $theme-shades: (
             "light-shade1": map-get($shades, light-shade),
