--- a/style.scss
+++ b/style.scss
@@ -12,13 +12,17 @@
 
 html,body{
     font-family: $baseFontFamily;
+    font-size:14px;
+    color: #333333;
 }
 
 .input-field{
-    padding: 5px;
+    padding: 10px 15px;
+    margin-top:10px;
+    width:300px;
     @include placeholder{
-        color:red;
-        font-size: 12px;
+        color:#1478FF;
+        font-size: 14px;
     };
 }
 
@@ -30,10 +34,10 @@ html,body{
         position: fixed;
         left: 0;
         top:0;
-        width: 300px;
+        width: 220px;
         height: 100%;
         padding: 30px;
-        background-color:#2d2d2d;
+        background-color:#1478FF;
         ul{
             margin:20px 0 0;
             padding: 0;
@@ -45,7 +49,7 @@ html,body{
                     font-size: 16px;
                     color:#ffffff;
                     display: block;
-                    padding: 15px 20px;
+                    padding: 15px 0px;
                     &:hover{
                         text-decoration: underline;
                     }
@@ -54,7 +58,7 @@ html,body{
         }
     }
     .content{
-        margin-left: 300px;
+        margin-left: 220px;
         padding: 30px;
         height: 100%;   
     }
@@ -70,11 +74,14 @@ html,body{
     }
 
     .code-snippet{
-        background-color: lightgrey;
-        border:1px solid grey;
+        background-color: #f5f5f5;
+        border:1px solid #ececec;
         border-radius: 4px;
-        padding:10px;
+        padding:10px 15px;
         font-size: 14px;
+        margin-top:20px;
+        margin-bottom:20px;
+        color:#666;
     }
 }
 
