--- a/style.scss
+++ b/style.scss
@@ -113,8 +113,9 @@ h1{
 }
 
 .custom-box{
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
+    margin-bottom: 10px;
     background-color: lightblue;
     &.custom-box-1{
         @include border(2px,solid,black);
