--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -1,5 +1,5 @@
 
-$baseFontFamily: 'Open Sans', sans-serif;
+$baseFontFamily: 'Open Sans Regular', sans-serif;
 
 //FONT SIZES RANGE
 $fontSizeRange:( 
