--- a/style.css
+++ b/style.css
@@ -1,1 +1,323 @@
-@font-face{font-family:"Open Sans";src:url("../fonts/OpenSans-Light.eot");src:url("../fonts/OpenSans-Light.eot?#iefix") format("embedded-opentype"),url("../fonts/OpenSans-Light.woff2") format("woff2"),url("../fonts/OpenSans-Light.woff") format("woff"),url("../fonts/OpenSans-Light.ttf") format("truetype"),url("../fonts/OpenSans-Light.svg#Open Sans") format("svg");font-weight:300;font-style:normal}@font-face{font-family:"Open Sans";src:url("../fonts/OpenSans-Regular.eot");src:url("../fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"),url("../fonts/OpenSans-Regular.woff2") format("woff2"),url("../fonts/OpenSans-Regular.woff") format("woff"),url("../fonts/OpenSans-Regular.ttf") format("truetype"),url("../fonts/OpenSans-Regular.svg#Open Sans") format("svg");font-weight:400;font-style:normal}@font-face{font-family:"Open Sans";src:url("../fonts/OpenSans-SemiBold.eot");src:url("../fonts/OpenSans-SemiBold.eot?#iefix") format("embedded-opentype"),url("../fonts/OpenSans-SemiBold.woff2") format("woff2"),url("../fonts/OpenSans-SemiBold.woff") format("woff"),url("../fonts/OpenSans-SemiBold.ttf") format("truetype"),url("../fonts/OpenSans-SemiBold.svg#Open Sans") format("svg");font-weight:600;font-style:normal}@font-face{font-family:"Open Sans";src:url("../fonts/OpenSans-Bold.eot");src:url("../fonts/OpenSans-Bold.eot?#iefix") format("embedded-opentype"),url("../fonts/OpenSans-Bold.woff2") format("woff2"),url("../fonts/OpenSans-Bold.woff") format("woff"),url("../fonts/OpenSans-Bold.ttf") format("truetype"),url("../fonts/OpenSans-Bold.svg#Open Sans") format("svg");font-weight:700;font-style:normal}@font-face{font-family:"Open Sans";src:url("../fonts/OpenSans-ExtraBold.eot");src:url("../fonts/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"),url("../fonts/OpenSans-ExtraBold.woff2") format("woff2"),url("../fonts/OpenSans-ExtraBold.woff") format("woff"),url("../fonts/OpenSans-ExtraBold.ttf") format("truetype"),url("../fonts/OpenSans-ExtraBold.svg#Open Sans") format("svg");font-weight:800;font-style:normal}.font-8{font-size:8px}.font-9{font-size:9px}.font-10{font-size:10px}.font-11{font-size:11px}.font-12{font-size:12px}.font-13{font-size:13px}.font-14{font-size:14px}.font-15{font-size:15px}.font-16{font-size:16px}.font-17{font-size:17px}.font-18{font-size:18px}.font-19{font-size:19px}.font-20{font-size:20px}.font-21{font-size:21px}.font-22{font-size:22px}.font-23{font-size:23px}.font-24{font-size:24px}.font-25{font-size:25px}.font-26{font-size:26px}.font-27{font-size:27px}.font-28{font-size:28px}.font-29{font-size:29px}.font-30{font-size:30px}.font-31{font-size:31px}.font-32{font-size:32px}.font-33{font-size:33px}.font-34{font-size:34px}.font-35{font-size:35px}.font-36{font-size:36px}.font-37{font-size:37px}.font-38{font-size:38px}.font-39{font-size:39px}.font-40{font-size:40px}.font-41{font-size:41px}.font-42{font-size:42px}.font-43{font-size:43px}.font-44{font-size:44px}.font-45{font-size:45px}.font-46{font-size:46px}.font-47{font-size:47px}.font-48{font-size:48px}.font-49{font-size:49px}.font-50{font-size:50px}.success-btn{padding:12px 20px;background:#f24343;font-size:16px;border-radius:5px;color:#fff;border-color:transparent;cursor:pointer;border:0}.success-btn:hover{background:#ef2121}.secondary-btn{padding:12px 20px;background:#f9af0d;font-size:16px;border-radius:5px;color:#fff;border-color:transparent;cursor:pointer;border:0}.secondary-btn:hover{background:#f9af0d}.cancel-btn{padding:12px 20px;background:#fff;font-size:16px;border-radius:5px;color:#4E4C70;border-color:#4E4C70;cursor:pointer;border:0;border:1px solid}.cancel-btn:hover{background-color:rgba(94,70,182,0.1);border:1px solid}.success-btn.large,.cancel-btn.large,.secondary-btn.large{padding:12px 30px;background:"";font-size:26px;border-radius:5px;color:#fff;border-color:transparent;cursor:pointer;border:0}.success-btn:disabled,.secondary-btn:disabled,.cancel-btn:disabled{border:1px solid;background:rgba(193,192,206,0);color:#C1C0CE;border-color:#C1C0CE;cursor:no-drop}*{margin:0;padding:0;box-sizing:border-box}html,body{font-family:"Open Sans",sans-serif;font-size:14px;color:#333333}.input-field{padding:10px 15px;margin-top:10px;width:300px}.input-field:-moz-placeholder{color:#1478FF;font-size:14px}.input-field::-moz-placeholder{color:#1478FF;font-size:14px}.input-field:-ms-input-placeholder{color:#1478FF;font-size:14px}.input-field::-webkit-input-placeholder{color:#1478FF;font-size:14px}.wrapper .hr-divider{margin:30px 0}.wrapper .side-nav{position:fixed;left:0;top:0;width:220px;height:100%;padding:30px;background-color:#1478FF}.wrapper .side-nav ul{margin:20px 0 0;padding:0;list-style:none}.wrapper .side-nav ul li{display:block}.wrapper .side-nav ul li a{text-decoration:none;font-size:16px;color:#ffffff;display:block;padding:15px 0px}.wrapper .side-nav ul li a:hover{text-decoration:underline}.wrapper .content{margin-left:220px;padding:30px;height:100%}.wrapper .topic .topic-title{font-size:24px;margin-bottom:15px}@media (max-width: 767px){.wrapper .topic .topic-title{font-size:20px}}.wrapper .code-snippet{background-color:#f5f5f5;border:1px solid #ececec;border-radius:4px;padding:10px 15px;font-size:14px;margin-top:20px;margin-bottom:20px;color:#666}.fontFamilySection-p1{font-family:"Open Sans",sans-serif;font-weight:800}html,body{font-family:sans-serif}h1{font-weight:700}.fontFamilySection-p2{font-family:"Open Sans",sans-serif;font-weight:300}.glyph.fs1{font-size:20px;width:45%;display:inline-block;padding:10px 0}
+@font-face {
+  font-family: "Open Sans Light";
+  src: url("../fonts/OpenSans-Light.eot");
+  src: url("../fonts/OpenSans-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Light.woff2") format("woff2"), url("../fonts/OpenSans-Light.woff") format("woff"), url("../fonts/OpenSans-Light.ttf") format("truetype"), url("../fonts/OpenSans-Light.svg#Open Sans Light") format("svg");
+  font-style: normal; }
+
+@font-face {
+  font-family: "Open Sans Regular";
+  src: url("../fonts/OpenSans-Regular.eot");
+  src: url("../fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular.woff2") format("woff2"), url("../fonts/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans-Regular.ttf") format("truetype"), url("../fonts/OpenSans-Regular.svg#Open Sans Regular") format("svg");
+  font-style: normal; }
+
+@font-face {
+  font-family: "Open Sans SemiBold";
+  src: url("../fonts/OpenSans-SemiBold.eot");
+  src: url("../fonts/OpenSans-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-SemiBold.woff2") format("woff2"), url("../fonts/OpenSans-SemiBold.woff") format("woff"), url("../fonts/OpenSans-SemiBold.ttf") format("truetype"), url("../fonts/OpenSans-SemiBold.svg#Open Sans SemiBold") format("svg");
+  font-style: normal; }
+
+@font-face {
+  font-family: "Open Sans Bold";
+  src: url("../fonts/OpenSans-Bold.eot");
+  src: url("../fonts/OpenSans-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Bold.woff2") format("woff2"), url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.ttf") format("truetype"), url("../fonts/OpenSans-Bold.svg#Open Sans Bold") format("svg");
+  font-style: normal; }
+
+@font-face {
+  font-family: "Open Sans ExtraBold";
+  src: url("../fonts/OpenSans-ExtraBold.eot");
+  src: url("../fonts/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-ExtraBold.woff2") format("woff2"), url("../fonts/OpenSans-ExtraBold.woff") format("woff"), url("../fonts/OpenSans-ExtraBold.ttf") format("truetype"), url("../fonts/OpenSans-ExtraBold.svg#Open Sans ExtraBold") format("svg");
+  font-style: normal; }
+
+.font-regular {
+  font-family: 'Open Sans Regular'; }
+
+.font-light {
+  font-family: 'Open Sans Light'; }
+
+.font-semibold {
+  font-family: 'Open Sans SemiBold'; }
+
+.font-bold {
+  font-family: 'Open Sans Bold'; }
+
+.font-extrabold {
+  font-family: 'Open Sans ExtraBold'; }
+
+.font-8 {
+  font-size: 8px; }
+
+.font-9 {
+  font-size: 9px; }
+
+.font-10 {
+  font-size: 10px; }
+
+.font-11 {
+  font-size: 11px; }
+
+.font-12 {
+  font-size: 12px; }
+
+.font-13 {
+  font-size: 13px; }
+
+.font-14 {
+  font-size: 14px; }
+
+.font-15 {
+  font-size: 15px; }
+
+.font-16 {
+  font-size: 16px; }
+
+.font-17 {
+  font-size: 17px; }
+
+.font-18 {
+  font-size: 18px; }
+
+.font-19 {
+  font-size: 19px; }
+
+.font-20 {
+  font-size: 20px; }
+
+.font-21 {
+  font-size: 21px; }
+
+.font-22 {
+  font-size: 22px; }
+
+.font-23 {
+  font-size: 23px; }
+
+.font-24 {
+  font-size: 24px; }
+
+.font-25 {
+  font-size: 25px; }
+
+.font-26 {
+  font-size: 26px; }
+
+.font-27 {
+  font-size: 27px; }
+
+.font-28 {
+  font-size: 28px; }
+
+.font-29 {
+  font-size: 29px; }
+
+.font-30 {
+  font-size: 30px; }
+
+.font-31 {
+  font-size: 31px; }
+
+.font-32 {
+  font-size: 32px; }
+
+.font-33 {
+  font-size: 33px; }
+
+.font-34 {
+  font-size: 34px; }
+
+.font-35 {
+  font-size: 35px; }
+
+.font-36 {
+  font-size: 36px; }
+
+.font-37 {
+  font-size: 37px; }
+
+.font-38 {
+  font-size: 38px; }
+
+.font-39 {
+  font-size: 39px; }
+
+.font-40 {
+  font-size: 40px; }
+
+.font-41 {
+  font-size: 41px; }
+
+.font-42 {
+  font-size: 42px; }
+
+.font-43 {
+  font-size: 43px; }
+
+.font-44 {
+  font-size: 44px; }
+
+.font-45 {
+  font-size: 45px; }
+
+.font-46 {
+  font-size: 46px; }
+
+.font-47 {
+  font-size: 47px; }
+
+.font-48 {
+  font-size: 48px; }
+
+.font-49 {
+  font-size: 49px; }
+
+.font-50 {
+  font-size: 50px; }
+
+/* 
+'btn' is a mixin need to place values in order to add
+mixins parameter is used in a sequence and need to be update in a same format only- sequence mentioned below
+padding, background-color, font-size, border-radius, text-color, border-color
+if any of the option you dont want to pass any value, follow to instruction
+if you dont want to use any color use transparent and for any value you can pass 0
+*/
+.success-btn {
+  padding: 12px 20px;
+  background: #f24343;
+  font-size: 16px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: transparent;
+  cursor: pointer;
+  border: 0; }
+  .success-btn:hover {
+    background: #ef2121; }
+
+.secondary-btn {
+  padding: 12px 20px;
+  background: #f9af0d;
+  font-size: 16px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: transparent;
+  cursor: pointer;
+  border: 0; }
+  .secondary-btn:hover {
+    background: #f9af0d; }
+
+.cancel-btn {
+  padding: 12px 20px;
+  background: #fff;
+  font-size: 16px;
+  border-radius: 5px;
+  color: #4E4C70;
+  border-color: #4E4C70;
+  cursor: pointer;
+  border: 0;
+  border: 1px solid; }
+  .cancel-btn:hover {
+    background-color: rgba(94, 70, 182, 0.1);
+    border: 1px solid; }
+
+.success-btn.large,
+.cancel-btn.large,
+.secondary-btn.large {
+  padding: 12px 30px;
+  background: "";
+  font-size: 26px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: transparent;
+  cursor: pointer;
+  border: 0; }
+
+.success-btn:disabled,
+.secondary-btn:disabled,
+.cancel-btn:disabled {
+  border: 1px solid;
+  background: rgba(193, 192, 206, 0);
+  color: #C1C0CE;
+  border-color: #C1C0CE;
+  cursor: no-drop; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html, body {
+  font-family: "Open Sans Regular", sans-serif;
+  font-size: 14px;
+  color: #333333; }
+
+.input-field {
+  padding: 10px 15px;
+  margin-top: 10px;
+  width: 300px; }
+  .input-field:-moz-placeholder {
+    color: #1478FF;
+    font-size: 14px; }
+  .input-field::-moz-placeholder {
+    color: #1478FF;
+    font-size: 14px; }
+  .input-field:-ms-input-placeholder {
+    color: #1478FF;
+    font-size: 14px; }
+  .input-field::-webkit-input-placeholder {
+    color: #1478FF;
+    font-size: 14px; }
+
+.wrapper .hr-divider {
+  margin: 30px 0; }
+
+.wrapper .side-nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 220px;
+  height: 100%;
+  padding: 30px;
+  background-color: #1478FF; }
+  .wrapper .side-nav ul {
+    margin: 20px 0 0;
+    padding: 0;
+    list-style: none; }
+    .wrapper .side-nav ul li {
+      display: block; }
+      .wrapper .side-nav ul li a {
+        text-decoration: none;
+        font-size: 16px;
+        color: #ffffff;
+        display: block;
+        padding: 15px 0px; }
+        .wrapper .side-nav ul li a:hover {
+          text-decoration: underline; }
+
+.wrapper .content {
+  margin-left: 220px;
+  padding: 30px;
+  height: 100%; }
+
+.wrapper .topic .topic-title {
+  font-size: 24px;
+  margin-bottom: 15px; }
+  @media (max-width: 767px) {
+    .wrapper .topic .topic-title {
+      font-size: 20px; } }
+
+.wrapper .code-snippet {
+  background-color: #f5f5f5;
+  border: 1px solid #ececec;
+  border-radius: 4px;
+  padding: 10px 15px;
+  font-size: 14px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #666; }
+
+h1 {
+  font-weight: 700; }
+
+.glyph.fs1 {
+  font-size: 20px;
+  width: 45%;
+  display: inline-block;
+  padding: 10px 0; }
